# gl

./: .clang-tidy  .clangd  .gitignore  CMakeLists.txt  README.md  data.h  data.hpp  enum.h  funcs.hpp  main.cpp  meson.build  returns.h  shorthands.h  window.h
fs/: 1  1.glsl  2.glsl  3.glsl
glad/: glad.c  glad.h
pch/: enum.h  returns.h  window.h
vs/: 1  1.glsl  2.glsl
